--- a/src/app/gifs/gifs-page/gifs-page.component.html
+++ b/src/app/gifs/gifs-page/gifs-page.component.html
@@ -1,1 +1,9 @@
-<p>gifs-page works!</p>
+<div >
+	<div class="py-3">
+		<app-busqueda></app-busqueda>
+	</div>
+
+
+	<app-resultados></app-resultados>
+
+</div>
